Fix mobile y overflow issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@ html {
 html,
 body {
   height: 100%;
+  overflow-y: hidden;
 }
 body {
   margin: 0;
